--- a/render.yaml
+++ b/render.yaml
@@ -8,9 +8,4 @@ services:
     plan: free # Use 'free' for testing; upgrade for production
     envVars:
       - key: DATABASE_URL
-        value: postgres://user:password@db:5432/dbname # Update with your database URL
-  - type: database
-    name: portfolio-database
-    plan: free
-    databaseType: postgresql
-    startCommand: ""
+        value: postgres://myuser:1234@database:5432/mydb?schema=public # Update this with your actual database connection string
