--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     command: >
       sh -c "
       npx prisma migrate deploy --schema=./src/prisma/schema.prisma &&
-      npm run dev
+      npm run start
       "
 
   database:
